sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:4: error: '(' expected but identifier found.
  while c==0{
        ^AlgCocktailSort1:19: error: illegal start of simple expression
} 
^